fix: Tab slider is not aligned with the text of tab button

--- a/src/style/adaptation/mobile.less
+++ b/src/style/adaptation/mobile.less
@@ -59,6 +59,10 @@
                         left: 15px;
                         bottom: 15px;
                     }
+                    .tofrac-switcher {
+                        left: 75px;
+                        bottom: 10px;
+                    }
                     .input-box, .output-box {
                         padding-right: 30px;
                     }
